Project

General

Profile

Actions

Bug #38488

closed

luminous: mds: message invalid access

Added by Patrick Donnelly about 5 years ago. Updated about 5 years ago.

Status:
Resolved
Priority:
Urgent
Category:
-
Target version:
% Done:

0%

Source:
Q/A
Tags:
Backport:
Regression:
No
Severity:
3 - minor
Reviewed:
Affected Versions:
ceph-qa-suite:
Component(FS):
MDS
Labels (FS):
Pull request ID:
Crash signature (v1):
Crash signature (v2):

Description

<error>
  <unique>0x0</unique>
  <tid>20</tid>
  <threadname>fn_anonymous</threadname>
  <kind>InvalidRead</kind>
  <what>Invalid read of size 4</what>
  <stack>
    <frame>
      <ip>0x41F3F7</ip>
      <obj>/usr/bin/ceph-mds</obj>
      <fn>Server::handle_client_session(MClientSession*)::{lambda(boost::basic_string_view&lt;char, std::char_traits&lt;char&gt; &gt;, boost::basic_string_view&lt;char, std::char_traits&lt;char&gt; &gt;)#2}::operator()(boost::basic_string_view&lt;char, std::char_traits&lt;char&gt; &gt;, boost::basic_string_view&lt;char, std::char_traits&lt;char&gt; &gt;) const [clone .constprop.2814]</fn>
      <dir>/usr/src/debug/ceph-12.2.11-86-g7301d85/src/include</dir>
      <file>utime.h</file>
      <line>98</line>
    </frame>
    <frame>
      <ip>0x41FBA2</ip>
      <obj>/usr/bin/ceph-mds</obj>
      <fn>operator()</fn>
      <dir>/usr/src/debug/ceph-12.2.11-86-g7301d85/src/mds</dir>
      <file>Server.cc</file>
      <line>440</line>
    </frame>
...

From: /ceph/teuthology-archive/yuriw-2019-02-22_20:12:52-fs-wip-yuri4-testing-2019-02-22-1534-luminous-distro-basic-smithi/3626940/remote/smithi151/log/valgrind/mds.a-s.log.gz

Message ref count needs increased in the lambda.


Related issues 1 (0 open1 closed)

Related to CephFS - Backport #38084: luminous: mds: log new client sessions with various metadataResolvedPatrick DonnellyActions
Actions #1

Updated by Patrick Donnelly about 5 years ago

  • Related to Backport #38084: luminous: mds: log new client sessions with various metadata added
Actions #2

Updated by Patrick Donnelly about 5 years ago

  • Pull request ID set to 26661
Actions #3

Updated by Patrick Donnelly about 5 years ago

  • Status changed from In Progress to Fix Under Review
Actions #5

Updated by Patrick Donnelly about 5 years ago

  • Status changed from Fix Under Review to Resolved
Actions

Also available in: Atom PDF