mds: get ref to message for lambda

Otherwise we have invalid reads. Caught by valgrind.

This cannot be cherry-picked as it was a bug introduced by a backport.

Introduced-by: 2f6289ff7f7385e462d59e096634a1dee0b60837
Fixes: http://tracker.ceph.com/issues/38488
Signed-off-by: Patrick Donnelly <pdonnell@redhat.com>